Native/OpenDDSWrapper/RtpsUdpInst.h

EXTERN_METHOD_EXPORT
::OpenDDS::DCPS::RtpsUdpInst *RtpsUdpInst_new(::OpenDDS::DCPS::TransportInst *inst);
EXTERN_METHOD_EXPORT
CORBA::Boolean RtpsUdpInst_GetIsReliable(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
CORBA::Boolean RtpsUdpInst_GetRequiresCdr(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
CORBA::Int32 RtpsUdpInst_GetSendBufferSize(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetSendBufferSize(::OpenDDS::DCPS::RtpsUdpInst *ri, CORBA::Int32 value);
EXTERN_METHOD_EXPORT
CORBA::Int32 RtpsUdpInst_GetRcvBufferSize(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetRcvBufferSize(::OpenDDS::DCPS::RtpsUdpInst *ri, CORBA::Int32 value);
EXTERN_METHOD_EXPORT
size_t RtpsUdpInst_GetNakDepth(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetNakDepth(::OpenDDS::DCPS::RtpsUdpInst *ri, size_t value);
EXTERN_METHOD_EXPORT
CORBA::Boolean RtpsUdpInst_GetUseMulticast(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetUseMulticast(::OpenDDS::DCPS::RtpsUdpInst *ri, CORBA::Boolean value);
EXTERN_METHOD_EXPORT
CORBA::Octet RtpsUdpInst_GetTtl(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetTtl(::OpenDDS::DCPS::RtpsUdpInst *ri, CORBA::Octet value);
EXTERN_METHOD_EXPORT
char *RtpsUdpInst_GetMulticastGroupAddress(::OpenDDS::DCPS::RtpsUdpInst *ri, int domain_id);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetMulticastGroupAddress(::OpenDDS::DCPS::RtpsUdpInst *ri, char *value);
EXTERN_METHOD_EXPORT
char *RtpsUdpInst_GetMulticastInterface(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetMulticastInterface(::OpenDDS::DCPS::RtpsUdpInst *ri, char *value);
EXTERN_METHOD_EXPORT
char *RtpsUdpInst_GetLocalAddress(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetLocalAddress(::OpenDDS::DCPS::RtpsUdpInst *ri, char *value);
EXTERN_METHOD_EXPORT
TimeValueWrapper RtpsUdpInst_GetNakResponseDelay(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetNakResponseDelay(::OpenDDS::DCPS::RtpsUdpInst *ri, TimeValueWrapper value);
EXTERN_METHOD_EXPORT
TimeValueWrapper RtpsUdpInst_GetHeartbeatPeriod(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetHeartbeatPeriod(::OpenDDS::DCPS::RtpsUdpInst *ri, TimeValueWrapper value);
EXTERN_METHOD_EXPORT
TimeValueWrapper RtpsUdpInst_GetReceiveAddressDuration(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetReceiveAddressDuration(::OpenDDS::DCPS::RtpsUdpInst *ri, TimeValueWrapper value);