Sources/OpenDDSharp/OpenDDS/DCPS/RtpsUdpInst.cs


    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetNakDepth")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial UIntPtr RtpsUdpInstGetNakDepth(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetNakDepth")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RtpsUdpInstSetNakDepth(IntPtr mi, UIntPtr value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetUseMulticast")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    [return: MarshalAs(UnmanagedType.I1)]
    public static partial bool GetUseMulticast(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetUseMulticast")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetUseMulticast(IntPtr mi, [MarshalAs(UnmanagedType.I1)] bool value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetTtl")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial byte RtpsUdpInstGetTtl(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetTtl")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RtpsUdpInstSetTtl(IntPtr mi, byte value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetMulticastGroupAddress")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial IntPtr GetMulticastGroupAddress(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetMulticastGroupAddress", StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetMulticastGroupAddress(IntPtr ird, string ip);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetMulticastInterface")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial IntPtr GetMulticastInterface(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetMulticastInterface", StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetMulticastInterface(IntPtr ird, string value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetLocalAddress")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial IntPtr RtpsUdpInstGetLocalAddress(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetLocalAddress", StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void RtpsUdpInstSetLocalAddress(IntPtr ird, string value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetNakResponseDelay", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.Struct)]
    public static extern TimeValue GetNakResponseDelay(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetNakResponseDelay", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetNakResponseDelay(IntPtr mi, [MarshalAs(UnmanagedType.Struct)] TimeValue value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetHeartbeatPeriod", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.Struct)]
    public static extern TimeValue GetHeartbeatPeriod(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetHeartbeatPeriod", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetHeartbeatPeriod(IntPtr mi, [MarshalAs(UnmanagedType.Struct)] TimeValue value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetReceiveAddressDuration", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.Struct)]
    public static extern TimeValue GetReceiveAddressDuration(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetReceiveAddressDuration", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetReceiveAddressDuration(IntPtr mi, [MarshalAs(UnmanagedType.Struct)] TimeValue value);
#else
    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_new", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr RtpsUdpInstNew(IntPtr inst);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetIsReliable", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool RtpsUdpInstGetIsReliable(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetRequiresCdr", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool GetRequiresCdr(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetSendBufferSize", CallingConvention = CallingConvention.Cdecl)]
    public static extern int RtpsUdpInstGetSendBufferSize(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetSendBufferSize", CallingConvention = CallingConvention.Cdecl)]
    public static extern void RtpsUdpInstSetSendBufferSize(IntPtr mi, int value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetRcvBufferSize", CallingConvention = CallingConvention.Cdecl)]
    public static extern int RtpsUdpInstGetRcvBufferSize(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetRcvBufferSize", CallingConvention = CallingConvention.Cdecl)]
    public static extern void RtpsUdpInstSetRcvBufferSize(IntPtr mi, int value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetNakDepth", CallingConvention = CallingConvention.Cdecl)]
    public static extern UIntPtr RtpsUdpInstGetNakDepth(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetNakDepth", CallingConvention = CallingConvention.Cdecl)]
    public static extern void RtpsUdpInstSetNakDepth(IntPtr mi, UIntPtr value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetUseMulticast", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool GetUseMulticast(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetUseMulticast", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetUseMulticast(IntPtr mi, [MarshalAs(UnmanagedType.I1)] bool value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetTtl", CallingConvention = CallingConvention.Cdecl)]
    public static extern byte RtpsUdpInstGetTtl(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetTtl", CallingConvention = CallingConvention.Cdecl)]
    public static extern void RtpsUdpInstSetTtl(IntPtr mi, byte value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetMulticastGroupAddress", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern IntPtr GetMulticastGroupAddress(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetMulticastGroupAddress", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern void SetMulticastGroupAddress(IntPtr ird, string ip);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetMulticastInterface", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern IntPtr GetMulticastInterface(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetMulticastInterface", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern void SetMulticastInterface(IntPtr ird, string value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetLocalAddress", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern IntPtr RtpsUdpInstGetLocalAddress(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetLocalAddress", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern void RtpsUdpInstSetLocalAddress(IntPtr ird, string value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetNakResponseDelay", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.Struct)]
    public static extern TimeValue GetNakResponseDelay(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetNakResponseDelay", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetNakResponseDelay(IntPtr mi, [MarshalAs(UnmanagedType.Struct)] TimeValue value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetHeartbeatPeriod", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.Struct)]
    public static extern TimeValue GetHeartbeatPeriod(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetHeartbeatPeriod", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetHeartbeatPeriod(IntPtr mi, [MarshalAs(UnmanagedType.Struct)] TimeValue value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_GetReceiveAddressDuration", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.Struct)]
    public static extern TimeValue GetReceiveAddressDuration(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsUdpInst_SetReceiveAddressDuration", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetReceiveAddressDuration(IntPtr mi, [MarshalAs(UnmanagedType.Struct)] TimeValue value);
#endif
}